worked on events

--- a/src/data/07-31-2021-event.md
+++ b/src/data/07-31-2021-event.md
@@ -1,13 +1,13 @@
 ---
-title: 'Summer Event'
-slug: '/events/july-event'
-startDate: 07-31-2021
-endDate: 07-31-2021
-startTime: 1000
-endTime: 1400
-price: 65
-description: "This is a brief description of the event"
-img: ../images/icon.png
+title: 'Area 51 Alien Invasion'
+slug: '/events/area-51-alien-invasion'
+startDate: 08-20-2021
+endDate: 08-22-2021
+startTime: ''
+endTime: ''
+price: 'See Details'
+description: ""
+img: ../images/area-51-alien-invasion-flyer-1.jpg
 ---
 
 # This is the Summer Event! 
